[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/bear.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/WakingBear.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.59632, 0.0932852, 0.463755 )

[node name="WakingBear" type="Spatial"]
script = ExtResource( 2 )

[node name="Skin" type="Spatial" parent="."]

[node name="bear" parent="Skin" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="RayCast_Right" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.2, 0 )
enabled = true
cast_to = Vector3( 5, 0, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast_Left" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.2, 0 )
enabled = true
cast_to = Vector3( -5, 0, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Area" type="Area" parent="."]
collision_layer = 16

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0681941, -1.06296, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
